k8s/disabled/triliumnext/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trilium
  labels:
    app: trilium
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trilium
  template:
    metadata:
      labels:
        app: trilium
    spec:
      containers:
        - name: trilium
          image: triliumnext/notes:latest@sha256:611a430016585d35b170eb9a0fa300ce76318f04a8ec0067549c4c52561b0c36
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: trilium-data
              mountPath: /home/node/trilium-data
            - name: localtime
              mountPath: /etc/localtime
              readOnly: true
      volumes:
        - name: trilium-data
          hostPath:
            path: /config/trilium-data
            type: DirectoryOrCreate
        - name: localtime
          hostPath:
            path: /etc/localtime
            type: File
